--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+main{
+  min-height: 80vh;
+}
+
+.rating span{
+  margin: 0.1rem;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
